# UniFiConnectAPI

./: .config.json.exemple  .env.example  .gitignore  Cargo.toml  Rocket.toml  Rocket.toml.example
src/: main.rs
src/configurations/: config.rs
src/controllers/: admin_controller.rs  approver_controller.rs  client_controller.rs  config_controller.rs  error_controller.rs  guest_controller.rs  mod.rs  user_controller.rs
src/db/: mongo_db.rs
src/glpi/: glpi.rs  mod.rs
src/ldap/: ldap.rs
src/model/entity/: admin.rs  approver.rs  client.rs  guest.rs  mod.rs  user.rs
src/model/repository/: admin_repositoy.rs  approver_repository.rs  client_repository.rs  guest_repository.rs  mod.rs  mongo_repository.rs
src/security/: approval_code.rs  auth_jwt.rs  mod.rs
src/unifi/: mod.rs  unifi.rs  unifi_controller.rs
src/utils/: error.rs  generator.rs  guest_utils.rs  mod.rs  monitoring.rs  responses.rs  validator.rs
