[package]
name = "external_portal_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version="0.5.1", features=["json", "secrets"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
