[package]
name = "external_portal_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version="0.5.1", features=["json", "secrets"] }
rocket_db_pools = { version="0.2.0", features=["mongodb"] }


tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

#mongodb = { version="3.1.1", features=["sync"]}
bson = "2.13.0"

jsonwebtoken = "9"
bcrypt = "0.16"
rand = "0.9"
ldap3 = "0.11"